# cpnest

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: index.html
examples/: spawn_probe.rs
scripts/: install.ps1
src/: app.rs  event.rs  keymap.rs  lib.rs  main.rs
src/copilot/: launcher.rs
src/pane/: grid.rs  mod.rs  pty.rs
src/sidebar/: filetree.rs  git.rs  mod.rs  panelist.rs
src/ui/: cursor.rs  mod.rs  theme.rs
